# radarScan

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  radar.h  socketioclient.cpp  socketioclient.h
.cmake/api/v1/reply.prev/: cache-v2-c2d9993a09f844c9c5ff.json  cmakeFiles-v1-bd30d4303f3db31d479c.json  cmakeFiles-v1-c4f9f0a0be08f8245563.json  codemodel-v2-3c0953062963d6e2e9cf.json  codemodel-v2-bbcef278dc33ef854a24.json  index-2026-01-15T09-16-22-0133.json  index-2026-01-31T11-57-55-0561.json  target-MyQt6App-Release-172cc4ca8375b2d32b34.json  target-MyQt6App-Release-e6498eea9602c48fa348.json  target-MyQt6App_autogen-Release-45bca9d366b419dd12d4.json  target-MyQt6App_autogen-Release-b1fbbd0083fd5ecdfe7d.json  target-MyQt6App_autogen_timestamp_deps-Release-df27d7975e9f396b870d.json  target-OpenGL__GL-Release-dbfc0c83d689b1b85a3e.json  target-OpenGL__GLU-Release-e83cdd8d9a23847083c3.json  target-Qt6__Concurrent-Release-639effffd84376b9eee6.json  target-Qt6__Core-Release-e8cb5abc9e810606bb28.json  target-Qt6__DBus-Release-d4b0182063e08a21dc67.json  (+79 more)
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qtc_clangd/: compile_commands.json
MyQt6App.app/Contents/: Info.plist
MyQt6App.app/Contents/MacOS/: MyQt6App
MyQt6App_autogen/: deps  mocs_compilation.cpp
MyQt6App_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_socketioclient.cpp  moc_socketioclient.cpp.d
MyQt6App_autogen/include/: ui_mainwindow.h
(+837 files in other folders)
